# GuitarMidi-LV2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  guitarmidi.ttl  manifest.ttl  manifest.ttl.in
.github/workflows/: cmake-single-platform.yml
AnalysisApp/: CMakeLists.txt  NewProject.jucer
AnalysisApp/Builds/: CMakeCache.txt
AnalysisApp/Builds/LinuxMakefile/: Makefile
AnalysisApp/JuceLibraryCode/: AppConfig.h
AnalysisApp/NewProject/: CMakeLists.txt
AnalysisApp/NewProject/Builds/LinuxMakefile/: Makefile
AnalysisApp/NewProject/JuceLibraryCode/: AppConfig.h  JuceHeader.h
AnalysisApp/NewProject/Source/: FFTElement.h  MainComponent.h
AnalysisApp/Source/: ControlWidget.h  FFTElement.cpp  FilterResponse.cpp  FilterResponse.h  FilteredAudioGraph.cpp  FilteredAudioGraph.hpp  Graph.cpp  Graph.hpp  GraphArea.cpp  GraphArea.h  Main.cpp  MainArea.cpp  MainArea.h  MainComponent.cpp  MainComponent.h  PhaseArea.cpp  PhaseArea.h  PhaseGraph.cpp  PhaseGraph.hpp  PlotArea.cpp  PlotArea.h  ResponseArea.cpp  ResponseArea.h  ResponseGraph.cpp  ResponseGraph.hpp  WaveFileView.cpp  WaveFileView.h
_packages/: guitarmidi-lv2_0.1.1_amd64.deb
cmake/: debian.cmake  setversionfromgit.cmake
src/: CMakeLists.txt  Makefile  fretboard.cpp  guitarmidi.c  guitarmidi.cpp  harmonicgroup.cpp  logging.cpp  midioutput.cpp  noteclassifier.cpp
src/EllipticBandPass/: DistrhoPluginInfo.h  Makefile  ellipticbandpass.cpp
src/ellipticbandpass/: ellipticbandpass.cpp  ellipticbandpass.h
src/include/: config.hpp.in  fretboard.hpp  harmonicgroup.hpp  logging.hpp  midioutput.hpp  noteclassifier.hpp
testmidi.lv2/: Makefile  manifest.ttl.in  testmidi.c  testmidi.ttl
